--- a/.abstruse.yml
+++ b/.abstruse.yml
@@ -1,12 +1,7 @@
 image: java_builder_docker_java12
 
 matrix:
-  - env: TEXT=howdy
-  - env: TEXT=hello
+  - env: SCRIPT='uploadArchivesRemote'
 
-before-install:
-  - sudo apt-get -yqq update
-install:
-  - sudo apt-get install -yqq cowsay
 script:
-  - /usr/games/cowsay $TEXT
+  - ./gradlew $SCRIPT
