--- a/.abstruse.yml
+++ b/.abstruse.yml
@@ -1,7 +1,7 @@
 image: java_builder_docker_java12
 
 matrix:
-  - env: SCRIPT='uploadArchives'
+  - env: SCRIPT=uploadArchives
 
 script:
   - ./gradlew $SCRIPT
