--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'maven'
 apply plugin: 'maven-publish'
 
 group 'software.kloud'
-version '1.0.14'
+version '1.0.15'
 
 sourceCompatibility = 1.8
 
@@ -19,11 +19,10 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.1.5.RELEASE'
-    compile group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
-    compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.1.3.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.1.3.RELEASE'
+
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.8'
-    compile group: 'org.hibernate', name: 'hibernate-annotations', version: '3.5.6-Final'
 
     compile group: 'software.kloud', name: 'silver-client-dep', version: '1.0.1'
 
